# fuel-ccp-installer

./: .gitignore  .gitreview  README.md  README.rst  RELEASE.rst  Vagrantfile  Vagrantfile_solar  config.yaml.sample  fuel-ccp-installer.py  fuel_ccp_installer.py  inventory.cfg.sample  kargo-custom.yaml  kube-config  mcpinstall.py  requirements.txt  setup.cfg  setup.py  setup_k8s.py  test-requirements.txt  tox.ini  vagrant-settings.yaml  vagrant-settings.yaml_defaults
calico/1.0.0/: meta.yaml
calico_master/1.0.0/: meta.yaml
cni/1.0.0/: meta.yaml
dashboard/1.0.0/: meta.yaml
deploy/: deploy.sh  get-solar.sh  kube-up.sh
doc/: PACKER.md
doc/source/: admin_node.rst  collect_info.rst  conf.py  configurable_params.rst  contributing.rst  external_ip_controller.rst  generate_inventory.rst  host_requirements.rst  index.rst  inventory_repo.rst  packer.rst  quickstart.rst  specify_hyperkube_image.rst  troubleshooting.rst  vagrant.rst
docker/1.0.0/: meta.yaml
docs/source/: conf.py
etcd/1.0.0/: meta.yaml
fedora_cloud_base/1.0.0/: meta.yaml
global_config/1.0.0/: meta.yaml
kubedns/1.0.0/: meta.yaml
kubelet/1.0.0/: meta.yaml
kubelet_master/1.0.0/: meta.yaml
kubernetes/1.0.0/: meta.yaml
node/1.0.0/: node.yaml
playbooks/: collect-info.yaml  configure-logs.yaml
tests/: __init__.py  test_inventory.py
utils/ironic/: README  nodelist_to_inventory.py
utils/jenkins/: README.md  default.yaml  default30-bridge.yaml  default30-kargo-bridge.yaml  default30-kargo.yaml  default30.yaml  deploy_k8s.sh  deploy_k8s_cluster_example.sh  env.py  extip_ecmp.yaml  run.sh  (+4 more)
(+150 files in other folders)
