[metadata]
name = fuel-ccp-installer
version = 0.1.0
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Deployment tool
description-file = README.md
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Topic :: System :: Software Distribution
keywords =
    deployment

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
